--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                 <button class="text-gray-600 hover:text-gray-900 mr-4 text-2xl" onclick="toggleMobileNav()">
                     <i class="fas fa-bars"></i>
                 </button>
-                <h1 class="text-xl font-semibold text-gray-800">C1 Open Hub</h1>
+                <h1 class="text-xl font-semibold text-gray-800">1C Open Hub</h1>
             </div>
             <div class="flex items-center space-x-4">
                 <button class="text-gray-600 hover:text-gray-900">
