--- a/index.html
+++ b/index.html
@@ -1275,20 +1275,20 @@
 
     <script>
         // Data arrays - initialized from localStorage or as empty arrays
-        let contactsData = JSON.parse(localStorage.getItem('c1OpenHub_contacts')) || [];
-        let companiesData = JSON.parse(localStorage.getItem('c1OpenHub_companies')) || [];
-        let dealsData = JSON.parse(localStorage.getItem('c1OpenHub_deals')) || [];
-        let tasksData = JSON.parse(localStorage.getItem('c1OpenHub_tasks')) || [];
-        let emissionsData = JSON.parse(localStorage.getItem('c1OpenHub_emissions')) || [];
-        let coursesData = JSON.parse(localStorage.getItem('c1OpenHub_courses')) || [
-            { id: 'c1', title: 'Introduction to ERP Systems', description: 'Learn the fundamentals of Enterprise Resource Planning systems and their role in modern business operations.', provider: 'C1 Academy', duration: '4 weeks', certificate: 'ERP Fundamentals', roleFocus: 'Junior ERP System Developer' },
-            { id: 'c2', title: 'Digital Transformation Strategy', description: 'Understand key concepts and strategies for driving digital transformation within organizations.', provider: 'C1 Academy', duration: '6 weeks', certificate: 'Digital Transformation Specialist', roleFocus: 'Digital Transformation Analyst' },
-            { id: 'c3', title: 'Green IT Practices', description: 'Explore sustainable practices in IT infrastructure and how to reduce environmental impact.', provider: 'C1 Academy', duration: '3 weeks', certificate: 'Green IT Certification', roleFocus: 'Sustainability Analyst' },
-            { id: 'c4', title: 'Financial Accounting Software Basics', description: 'An introductory course to using accounting software for financial record-keeping and reporting.', provider: 'C1 Academy', duration: '5 weeks', certificate: 'Accounting Software User', roleFocus: 'Accounting Software Support' },
-            { id: 'c5', title: 'HRIS Data Management', description: 'Learn to manage and analyze data within Human Resources Information Systems (HRIS).', provider: 'C1 Academy', duration: '4 weeks', certificate: 'HRIS Data Professional', roleFocus: 'HRIS Data Analyst' },
-            { id: 'c6', title: 'Advanced Supply Chain Management', description: 'Deep dive into optimizing supply chain processes and logistics for global operations.', provider: 'C1 Academy', duration: '8 weeks', certificate: 'Supply Chain Expert', roleFocus: 'Supply Chain Manager' },
-            { id: 'c7', title: 'Cybersecurity for Business Professionals', description: 'Essential cybersecurity concepts and best practices for non-technical business roles.', provider: 'C1 Academy', duration: '3 weeks', certificate: 'Business Cybersecurity', roleFocus: 'All Business Roles' },
-            { id: 'c8', title: 'Project Management Fundamentals (Agile)', description: 'An introduction to Agile methodologies and project management principles applicable to various industries.', provider: 'C1 Academy', duration: '5 weeks', certificate: 'Agile Project Practitioner', roleFocus: 'Project Coordinator' }
+        let contactsData = JSON.parse(localStorage.getItem('1cOpenHub_contacts')) || [];
+        let companiesData = JSON.parse(localStorage.getItem('1cOpenHub_companies')) || [];
+        let dealsData = JSON.parse(localStorage.getItem('1cOpenHub_deals')) || [];
+        let tasksData = JSON.parse(localStorage.getItem('1cOpenHub_tasks')) || [];
+        let emissionsData = JSON.parse(localStorage.getItem('1cOpenHub_emissions')) || [];
+        let coursesData = JSON.parse(localStorage.getItem('1cOpenHub_courses')) || [
+            { id: '1c', title: 'Introduction to ERP Systems', description: 'Learn the fundamentals of Enterprise Resource Planning systems and their role in modern business operations.', provider: '1c Academy', duration: '4 weeks', certificate: 'ERP Fundamentals', roleFocus: 'Junior ERP System Developer' },
+            { id: 'c2', title: 'Digital Transformation Strategy', description: 'Understand key concepts and strategies for driving digital transformation within organizations.', provider: '1c Academy', duration: '6 weeks', certificate: 'Digital Transformation Specialist', roleFocus: 'Digital Transformation Analyst' },
+            { id: 'c3', title: 'Green IT Practices', description: 'Explore sustainable practices in IT infrastructure and how to reduce environmental impact.', provider: '1c Academy', duration: '3 weeks', certificate: 'Green IT Certification', roleFocus: 'Sustainability Analyst' },
+            { id: 'c4', title: 'Financial Accounting Software Basics', description: 'An introductory course to using accounting software for financial record-keeping and reporting.', provider: '1c Academy', duration: '5 weeks', certificate: 'Accounting Software User', roleFocus: 'Accounting Software Support' },
+            { id: 'c5', title: 'HRIS Data Management', description: 'Learn to manage and analyze data within Human Resources Information Systems (HRIS).', provider: '1c Academy', duration: '4 weeks', certificate: 'HRIS Data Professional', roleFocus: 'HRIS Data Analyst' },
+            { id: 'c6', title: 'Advanced Supply Chain Management', description: 'Deep dive into optimizing supply chain processes and logistics for global operations.', provider: '1c Academy', duration: '8 weeks', certificate: 'Supply Chain Expert', roleFocus: 'Supply Chain Manager' },
+            { id: 'c7', title: 'Cybersecurity for Business Professionals', description: 'Essential cybersecurity concepts and best practices for non-technical business roles.', provider: '1c Academy', duration: '3 weeks', certificate: 'Business Cybersecurity', roleFocus: 'All Business Roles' },
+            { id: 'c8', title: 'Project Management Fundamentals (Agile)', description: 'An introduction to Agile methodologies and project management principles applicable to various industries.', provider: '1c Academy', duration: '5 weeks', certificate: 'Agile Project Practitioner', roleFocus: 'Project Coordinator' }
         ];
 
         // Global variables to track the index of the item being edited
@@ -1566,7 +1566,7 @@
                 contactsData.push(newContact);
                 showMessageBox('Contact created successfully!', 'success');
             }
-            localStorage.setItem('c1OpenHub_contacts', JSON.stringify(contactsData)); // Save to localStorage
+            localStorage.setItem('1cOpenHub_contacts', JSON.stringify(contactsData)); // Save to localStorage
             paginationState.contacts.currentPage = 1; // Reset to first page after adding/editing
             renderContacts(document.getElementById('contactSearchInput').value); // Re-render with current search query
             closeContactModal(); // Close the modal
@@ -1579,7 +1579,7 @@
                 `Are you sure you want to delete ${contactsData[index].name}? This action cannot be undone.`,
                 () => {
                     contactsData.splice(index, 1); // Remove contact from array
-                    localStorage.setItem('c1OpenHub_contacts', JSON.stringify(contactsData)); // Save to localStorage
+                    localStorage.setItem('1cOpenHub_contacts', JSON.stringify(contactsData)); // Save to localStorage
                     paginationState.contacts.currentPage = 1; // Reset to first page after deleting
                     renderContacts(document.getElementById('contactSearchInput').value); // Re-render with current search query
                     showMessageBox('Contact deleted successfully!', 'success');
@@ -1720,7 +1720,7 @@
                 companiesData.push(companyData);
                 showMessageBox('Company created successfully!', 'success');
             }
-            localStorage.setItem('c1OpenHub_companies', JSON.stringify(companiesData)); // Save to localStorage
+            localStorage.setItem('1cOpenHub_companies', JSON.stringify(companiesData)); // Save to localStorage
             paginationState.companies.currentPage = 1; // Reset to first page after adding/editing
             renderCompanies(document.getElementById('companySearchInput').value); // Re-render with current search query
             closeCompanyModal();
@@ -1733,7 +1733,7 @@
                 `Are you sure you want to delete ${companiesData[index].name}? This action cannot be undone.`,
                 () => {
                     companiesData.splice(index, 1);
-                    localStorage.setItem('c1OpenHub_companies', JSON.stringify(companiesData)); // Save to localStorage
+                    localStorage.setItem('1cOpenHub_companies', JSON.stringify(companiesData)); // Save to localStorage
                     paginationState.companies.currentPage = 1; // Reset to first page after deleting
                     renderCompanies(document.getElementById('companySearchInput').value); // Re-render with current search query
                     showMessageBox('Company deleted successfully!', 'success');
@@ -1870,7 +1870,7 @@
                 dealsData.push(dealData);
                 showMessageBox('Deal created successfully!', 'success');
             }
-            localStorage.setItem('c1OpenHub_deals', JSON.stringify(dealsData)); // Save to localStorage
+            localStorage.setItem('1cOpenHub_deals', JSON.stringify(dealsData)); // Save to localStorage
             paginationState.deals.currentPage = 1; // Reset to first page after adding/editing
             renderDeals(document.getElementById('dealSearchInput').value); // Re-render with current search query
             closeDealModal();
@@ -1883,7 +1883,7 @@
                 `Are you sure you want to delete deal "${dealsData[index].name}"? This action cannot be undone.`,
                 () => {
                     dealsData.splice(index, 1);
-                    localStorage.setItem('c1OpenHub_deals', JSON.stringify(dealsData)); // Save to localStorage
+                    localStorage.setItem('1cOpenHub_deals', JSON.stringify(dealsData)); // Save to localStorage
                     paginationState.deals.currentPage = 1; // Reset to first page after deleting
                     renderDeals(document.getElementById('dealSearchInput').value); // Re-render with current search query
                     showMessageBox('Deal deleted successfully!', 'success');
@@ -2016,7 +2016,7 @@
                 tasksData.push(taskData);
                 showMessageBox('Task created successfully!', 'success');
             }
-            localStorage.setItem('c1OpenHub_tasks', JSON.stringify(tasksData)); // Save to localStorage
+            localStorage.setItem('1cOpenHub_tasks', JSON.stringify(tasksData)); // Save to localStorage
             paginationState.tasks.currentPage = 1; // Reset to first page after adding/editing
             renderTasks(document.getElementById('taskSearchInput').value); // Re-render with current search query
             closeTaskModal();
@@ -2029,7 +2029,7 @@
                 `Are you sure you want to delete task "${tasksData[index].name}"? This action cannot be undone.`,
                 () => {
                     tasksData.splice(index, 1);
-                    localStorage.setItem('c1OpenHub_tasks', JSON.stringify(tasksData)); // Save to localStorage
+                    localStorage.setItem('1cOpenHub_tasks', JSON.stringify(tasksData)); // Save to localStorage
                     paginationState.tasks.currentPage = 1; // Reset to first page after deleting
                     renderTasks(document.getElementById('taskSearchInput').value); // Re-render with current search query
                     showMessageBox('Task deleted successfully!', 'success');
@@ -2321,7 +2321,7 @@
                 emissionsData.push(emissionData);
                 showMessageBox('Emission record added successfully!', 'success');
             }
-            localStorage.setItem('c1OpenHub_emissions', JSON.stringify(emissionsData)); // Save to localStorage
+            localStorage.setItem('1cOpenHub_emissions', JSON.stringify(emissionsData)); // Save to localStorage
             paginationState.emissions.currentPage = 1; // Reset to first page after adding/editing
             renderEmissions(document.getElementById('emissionSearchInput').value); // Re-render with current search query
             closeEmissionModal();
@@ -2335,7 +2335,7 @@
                 `Are you sure you want to delete the emission record for ${emissionsData[index].company} (${emissionsData[index].year})? This action cannot be undone.`,
                 () => {
                     emissionsData.splice(index, 1);
-                    localStorage.setItem('c1OpenHub_emissions', JSON.stringify(emissionsData)); // Save to localStorage
+                    localStorage.setItem('1cOpenHub_emissions', JSON.stringify(emissionsData)); // Save to localStorage
                     paginationState.emissions.currentPage = 1; // Reset to first page after deleting
                     renderEmissions(document.getElementById('emissionSearchInput').value); // Re-render with current search query
                     showMessageBox('Emission record deleted successfully!', 'success');
@@ -2404,7 +2404,7 @@
             const lineColors = [
                 '#4F46E5', '#8B5CF6', '#EC4899', '#F59E0B', '#10B981',
                 '#EF4444', '#3B82F6', '#6B7280', '#D946EF', '#06B6D4',
-                '#FACC15', '#A78BFA', '#FB7185', '#6EE7B7', '#F87171'
+                '#FA1cc5', '#A78BFA', '#FB7185', '#6EE7B7', '#F87171'
             ];
 
             const datasets = validCompanyData.map((company, index) => {
